--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "^0.68.2",
     "react-native-builder-bob": "^0.18.0",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
@@ -143,5 +143,9 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "react-native-encrypted-storage": "^4.0.2",
+    "react-redux": "^8.0.1"
   }
 }
