--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-native": "^0.68.2",
-    "react-native-builder-bob": "^0.18.0",
+    "react-native-builder-bob": "^0.18.2",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
   },
@@ -145,7 +145,13 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.1.3",
+    "@react-native-picker/picker": "^2.4.1",
     "react-native-encrypted-storage": "^4.0.2",
-    "react-redux": "^8.0.1"
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-password-strength-meter": "^0.0.5",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^8.0.2"
   }
 }
